INTYGFV-16640: Refactored and implemented ability to map values to xml by merging delsvar from different svar in certificate xml.